# rag-assistant

./: .gitignore  README.md  docker-compose.yml
agent/: .env.example  Dockerfile  pyproject.toml
agent/data/: memory.db
agent/src/: main.py
agent/src/domain/entities/: message.py  (+2 more)
agent/tests/: test_agent.py
mcp-server/: .env.example  Dockerfile  pyproject.toml  run_stdio.py
mcp-server/data/chroma/: chroma.sqlite3
mcp-server/src/: indexer.py  server.py
mcp-server/tests/: test_search.py  test_server.py
scraper/: .env.example  Dockerfile  pyproject.toml  requirements.txt
scraper/data/raw/: index.json  www_bancolombia_com_personas_!ut_p_z1_04_Sj9CPykssy0xPLMnMz0vMAfIjo8zi_T083N1N3A0C_I3NTQ0CAw0MLI1cgz.json  www_bancolombia_com_personas_a-la-mano.json  www_bancolombia_com_personas_a-la-mano_deposito-a-la-mano.json  www_bancolombia_com_personas_alternativas-financieras_negociar-deuda.json  www_bancolombia_com_personas_banco-para-todos.json  www_bancolombia_com_personas_banco-para-todos_colombianos-en-el-exterior.json  www_bancolombia_com_personas_banco-para-todos_familia.json  www_bancolombia_com_personas_banco-para-todos_independientes.json  www_bancolombia_com_personas_banco-para-todos_jovenes.json  www_bancolombia_com_personas_banco-para-todos_ninos.json  www_bancolombia_com_personas_banco-para-todos_ninos_!ut_p_z1_04_Sj9CPykssy0xPLMnMz0vMAfIjo8zi_T083N1.json  www_bancolombia_com_personas_banco-para-todos_ninos_calculadora_.json  www_bancolombia_com_personas_banco-para-todos_preferencial.json  www_bancolombia_com_personas_banco-para-todos_privada.json  www_bancolombia_com_personas_beneficios.json  www_bancolombia_com_personas_beneficios_futbol_hinchas.json  www_bancolombia_com_personas_beneficios_nomina.json  www_bancolombia_com_personas_beneficios_ofertas_detalle?ofertaId=04e23065-c865-4d62-99fe-7f7bdd802b1.json  www_bancolombia_com_personas_comprar-y-vender-casa_comparador-prestamos-para-vivienda.json  www_bancolombia_com_personas_consumidor-financiero.json  www_bancolombia_com_personas_consumidor-financiero_!ut_p_z1_04_Sj9CPykssy0xPLMnMz0vMAfIjo8ziTQzNnD1M.json  www_bancolombia_com_personas_contactanos.json  www_bancolombia_com_personas_contactanos_bancolombia.json  www_bancolombia_com_personas_contactanos_bancolombia_.json  (+57 more)
scraper/src/: main.py
scraper/tests/: test_crawler.py
(+36 files in other folders)
